# rust-example-ping-monitor

./: Cargo.toml  README.md
.github/workflow/: ci.yaml
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs  server.rs
src/monitor/: manager.rs  mod.rs  ping.rs
src/persistence/: database.rs  models.rs
tests/: integration.rs
