[package]
name = "ping-monitor-rs"
version = "0.1.0"
edition = "2024"
authors = ["Marc Riegel <mail@mrcrgl.de>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["json"] }
processmanager = { version = "0.3.2", features = ["tracing", "signal"] }
tracing = "0.1.41"
async-trait = "0.1.86"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
serde = { version = "1.0.218", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
ping-rs = "0.1.2"

[dev-dependencies]
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls", "multipart"] }